[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Art/TestAssets/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_entity.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player_detection_zone.gd" type="Script" id=3]
[ext_resource path="res://Scripts/attack_range.gd" type="Script" id=4]

[sub_resource type="Animation" id=6]
resource_name = "Walk_Idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk_Idle_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 1419.96

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 112 )

[sub_resource type="RectangleShape2D" id=8]

[node name="Enemy_entity" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 0, -108 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 10
vframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemySprite")
anims/Walk_Idle = SubResource( 6 )
anims/Walk_Idle_left = SubResource( 7 )

[node name="Player_detection_zone" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -107 )
script = ExtResource( 3 )

[node name="detection_collision" type="CollisionShape2D" parent="Player_detection_zone"]
shape = SubResource( 2 )

[node name="attack_range" type="Area2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -107 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.5 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -48.0
margin_top = -283.0
margin_right = 40.0
margin_bottom = -229.0
rect_scale = Vector2( 7, 7 )
uppercase = true

[node name="fire_delay_timer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Player_detection_zone" to="Player_detection_zone" method="_on_Player_detection_zone_body_entered"]
[connection signal="body_exited" from="Player_detection_zone" to="Player_detection_zone" method="_on_Player_detection_zone_body_exited"]
[connection signal="area_entered" from="attack_range" to="attack_range" method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="attack_range" to="attack_range" method="_on_attack_range_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
